tests/stage2/valid/func_call.c
int add(int a, int b){
    return a + b;
}

int main(){
    int a = 10;
    int b = 5;
    b = add(a, b);
    return b;
}
