tests/stage2/invalid/conflicting_def.c
int fact(int a);
int main() {
    int n = 5;
    return fact(n, n);
}

int fact(int a, int b){
    return a + b;
}
